--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
 								<select id="conocido" name="conocido" required>
 									<option value="linkedin">Linkedin</option>
 									<option value="github">Github</option>
-									<option value="otro">Otro</option>
 								</select>
 							</div>
 						</div>
@@ -173,19 +172,14 @@
 								<input type="email" id="email" name="email" placeholder="name@company.com" 
 								pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}" required>
 							</div>
-
 							<div class="form-row">
-								<label for="ejercito">Telefono</label>
-								<input type="number" id="phone" name="phone" placeholder="+3400000000" required>
-							</div>
-						</div>
-
-						<div class="form-row">
 							<label>Comentarios</label>
 							<textarea id="comentarios"></textarea>
 						</div>
-					</div>
-
+							<!--<div class="form-row">
+								<label for="ejercito">Telefono</label>
+								<input type="number" id="phone" name="phone" placeholder="+3400000000" required>
+							</div>-->
 					<div>
 						<div class="form-row">
 							<button type="submit" id="enviar">Enviar</button>
