enlace linkedin e imagenes nuevas

--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 					<div id="dj" class="tencologias-photo"></div>
 				</div>
 				<div>
-					<div id="css3" class="tencologias-photo"></div>
+					<div id="cms" class="tencologias-photo"></div>
 					<div id="html5" class="tencologias-photo"></div>
-					<div id="js" class="tencologias-photo"></div>
+					<div id="node" class="tencologias-photo"></div>
 				</div>
 				<div>
 					<div id="git" class="tencologias-photo"></div>
 					<div id="aws" class="tencologias-photo"></div>
-					<div id="git" class="tencologias-photo"></div>
+					<div id="php" class="tencologias-photo"></div>
 				</div>
 			</div>		
 		</section>
@@ -147,8 +147,9 @@
 		</section>
 		<section id="contacto" class="row-flex section-container-reverse">
 			<div class="flex-item">
-				<h2>Contacto</h2>
+				
 				<form id="formContact" class="form row-flex" novalidate>
+						<h2>Contacto</h2>
 					<div class="form-items">
 						<div>
 							<div class="form-row">
@@ -192,7 +193,7 @@
 	</main>
 
 	<footer class="footer">
-		Ivan Rodriguez Pulido
+		<a href="https://es.linkedin.com/in/ivan-rodriguez-pulido" target="_blank"><img src="./images/linkedin.png"></a>&nbsp;&nbsp; Ivan Rodriguez Pulido
 	</footer>
 </body>
 </html>
